# sentiment_analysis

./: AppStoreReview.csv  README.md  app_store_crawler.gas  main.py  pyproject.toml
documents/0/: sample.txt  sample_0.txt  sample_1.txt  sample_10.txt  sample_10000.txt  sample_10001.txt  sample_10002.txt  sample_10003.txt  sample_10004.txt  sample_10005.txt  sample_10006.txt  sample_10007.txt  sample_10008.txt  sample_10009.txt  sample_10010.txt  sample_10011.txt  sample_10012.txt  sample_10013.txt  sample_10014.txt  sample_10016.txt  sample_10017.txt  sample_10018.txt  sample_10019.txt  sample_10020.txt  sample_10021.txt  sample_10022.txt  sample_10023.txt  sample_10024.txt  sample_10025.txt  sample_10026.txt  sample_10027.txt  sample_10029.txt  sample_10030.txt  sample_10031.txt  sample_10032.txt  sample_10033.txt  sample_10034.txt  sample_10035.txt  sample_10037.txt  sample_10038.txt  (+3369 more)
documents/1/: sample.txt  sample_10040.txt  sample_10061.txt  sample_10076.txt  sample_10079.txt  sample_10082.txt  sample_10085.txt  sample_10098.txt  sample_10105.txt  sample_10108.txt  sample_10110.txt  sample_10116.txt  sample_10117.txt  sample_1022.txt  sample_1037.txt  sample_1047.txt  sample_1053.txt  sample_1070.txt  sample_1075.txt  sample_1094.txt  sample_1159.txt  sample_1166.txt  sample_1169.txt  sample_1173.txt  sample_1188.txt  sample_1203.txt  sample_1220.txt  sample_1231.txt  sample_1245.txt  sample_1249.txt  sample_1250.txt  sample_1251.txt  sample_1253.txt  sample_1256.txt  sample_1264.txt  sample_1265.txt  sample_1266.txt  sample_1267.txt  sample_1270.txt  (+809 more)
(+5814 files in other folders)
