[tool.poetry]
name = "sentiment_analysis"
version = "0.1.0"
description = ""
authors = ["konumaru <konumaru1022@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.1"
pandas = "^1.1.0"
mecab-python3 = "^1.0.1"
gensim = "^3.8.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.3"
pycodestyle = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
